# HMI-Architect-Portfolio

./: README.md
architecture/: architecture-diagram.md  hmi-architecture-overview.md  mvvm-pattern-in-qt.md  performance-pipeline.md  safety-boundary.md  safety-critical-ui-design.md
projects/centrifuge-ui-demo/: CMakeLists.txt  readme.md
projects/centrifuge-ui-demo/qml/: Main.qml  Readme.mg
projects/centrifuge-ui-demo/qml/components/: AlarmBanner.qml  RpmGauge.qml
projects/centrifuge-ui-demo/src/: centrifuge_controller.cpp  centrifuge_controller.h  hal_factory.cpp  hal_factory.h  hal_interface.h  hal_sim.cpp  hal_sim.h  main.cpp  readme.md  rpm_viewmodel.cpp  rpm_viewmodel.h  sm_types.h
